--- a/mysite/polls/templates/polls/report_master.html
+++ b/mysite/polls/templates/polls/report_master.html
@@ -2,19 +2,28 @@
 {% block title %}Hi zzzz{% endblock title %}
 {% block body %}Enter a new report details
 
-<form method="post">
+<form method="post" bgcolor="Blue">
     {% csrf_token%}
     <h1>Welcome To Report creation!!</h1>
     <label>Report Name
          <select name="report_name" >
         {% for rep in report_list %}
-            <option id="{{rep.Report_idfr}}" value="{{rep.Report_desc}}" label="{{rep}}" style="width:150px;"></option>
+<!--             <label for="report_id"><input type="checkbox" id="report_id"></input></label>-->
+            <option id="{{rep.Report_idfr}}" label="{{rep.id}}" style="width:150px;">{{rep.Report_desc}}</option>
              {% endfor%}
-             <label>Report path<input name=report_path type="text" value="{{rep.Report_path}}" size="50"></input></label>
     </select>
     </label>
+    <label> select DB </label>
+    <div></div>
+    {% for db in db_name%}
+    <div>
+    <label for="dbs" value="{{db}}">{{db[0]}}
+        <input type="checkbox" id="dbs">
+    </label>
+        </div>
+    {% endfor%}
 
-    <label>Supporting Files<input type="checkbox"></input></label>
+
     <input type="submit" value="OK">
 
 </form>
